trying to fix styling on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -26,7 +26,7 @@ body{
 
     @media only screen and (max-width: 640px) {
 		font-size: 17px;
-        width: 15%;
+        width: 19%;
         height: 20px;
 	}
     
@@ -51,8 +51,8 @@ button{
 
     @media only screen and (max-width: 640px) {
 		font-size: 5px;
-        width: 14%;
-        height: 30px;
+        width: 19%;
+        height: 32px;
         font-weight: 1000;
 	}
 
@@ -252,7 +252,7 @@ button{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     @media only screen and (max-width: 640px) {
         font-size: 10px;
-        top: -51%;
+        top: -53%;
         left: 20%;}
 }
 
